# homebrew-six7

./: .gitignore  Cargo.toml  LICENSE  README.md  protocol.md
.dendrites/: store.db
Formula/: six7.rb
src/: main.rs
