[package]
name = "six7"
version = "0.7.52"
edition = "2021"
authors = ["Flavio Aiello"]
description = "A secure peer-to-peer chatroom CLI built on Korium's adaptive networking fabric"
license = "MIT"
repository = "https://github.com/six7chat/homebrew-six7"
keywords = ["chat", "p2p", "networking", "pubsub", "korium"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
korium = { git = "ssh://git@github.com/magikrun/korium.git", tag = "v0.7.52" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
rand = "0.8"

[[bin]]
name = "six7"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true